--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@ header{
     display: flex;
     justify-content: center;
     height: 120px;
-    background-color: rgb(231, 227, 227);;
+    background-color: rgb(231, 227, 227);
 }
 .container{
     display: flex;
@@ -41,14 +41,6 @@ nav .active a,
 nav a:hover{
     background-color: #000000;
     color: #fff;
-}
-.subMenu{
-    font-size: 12px;
-    display: none;
-    flex-direction: row;
-}
-nav ul li:hover > .subMenu{ 
-    display: block;
 }
 #banner{
     display: flex;
@@ -115,28 +107,18 @@ nav ul li:hover > .subMenu{
     flex: 2;
     display: flex;
     align-items: center;
-    color: #fff;
-    
-}
-.slide{
-    display: flex;
-    /*display: none;*/
-    width: 500px;
-    height: 300px;
-    margin-top: 20px;
+    color: #fff;  
 }
 .aulas{
     width: 500px;
     height: 300px;  
 }
-
 .banner_instrumentos{
     display: flex;
     justify-content: space-around;
     align-items: center;
     height: 150px;
 }
-
 .instrumentos{
     color: #fff;
     text-shadow: 1px 1px 1px rgb(241, 198, 5);
@@ -146,8 +128,7 @@ nav ul li:hover > .subMenu{
     width: 100px;
     height: 100px;
     border: 2px solid rgb(241, 198, 5);
-    border-radius: 50%;
-    
+    border-radius: 50%;  
 }
 .banner_instrumentos a{
     text-decoration: none;
@@ -160,8 +141,56 @@ nav ul li:hover > .subMenu{
     background-color: rgb(155, 153, 153);
     color: rgb(0, 0, 0);
 }
+.cadastro{
+    width: 700px;
+    height: 300px;
+    margin-left: 250px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: rgb(211, 209, 209);
+    font-size: 15px;
+    border: 3px solid #999797;
+    margin-bottom: 30px;
+}
+form{
+    margin-bottom: 30px;
+}
+form label{
+    font-size: 20px;
+}
+form input{
+    padding: 5px;
+    width: 300px;
+    margin-top: 10px;
+    background-color: rgb(196, 192, 192);
+    border-radius: 5px;
+}
+
+@keyframes luz_botton{
+    0% {border: 3px solid rgb(241, 198, 5);}
+    25%{border: 3px solid rgb(241, 217, 107);}
+    50%{border: 3px solid rgb(241, 198, 5);}
+    75%{border: 3px solid rgb(241, 217, 107);}
+    100%{border: 3px solid rgb(241, 198, 5);}
+}
+form .btn{
+    padding: 5px;
+    width: 150px;
+    margin-top: 10px;
+    margin-left: 90px;
+    border: 3px solid rgb(241, 198, 5);
+    border-radius: 10px;
+    font-size: 15px;
+    background-color: rgb(248, 245, 245);
+    text-shadow: 1px 1px 1px rgb(0, 0, 0);
+    animation-name: luz_botton;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
+    cursor: pointer;
+}
 
 .rodape{
-    background-color: aqua;
-    height: 200px;
+    background-color: rgb(231, 227, 227);;
+    height: 100px;
 }
